--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "url": "https://github.com/JeonB/restraunt-picker/issues"
   },
   "homepage": "https://github.com/JeonB/restraunt-picker#readme",
+  "type": "module",
   "devDependencies": {
     "electron": "^29.0.1"
+  },
+  "dependencies": {
+    "fastify": "^4.26.1"
   }
 }
