--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "restraunt random picker",
   "main": "main.js",
   "scripts": {
-    "start": "node index.ts",
+    "start": "electron .",
     "test": "npm test"
   },
   "repository": {
