--- a/package.json
+++ b/package.json
@@ -1,39 +1,58 @@
 {
-  "name": "restraunt-picker",
+  "name": "restaurant-picker",
   "version": "1.0.0",
-  "description": "restraunt random picker",
+  "description": "restauraunt random picker",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
     "dev": "ts-node --files ./src/index.ts",
+    "start": "react-scripts start",
     "test": "npm test"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/JeonB/restraunt-picker.git"
+    "url": "git+https://github.com/JeonB/restauraunt-picker.git"
   },
   "author": "jeonb",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/JeonB/restraunt-picker/issues"
+    "url": "https://github.com/JeonB/restauraunt-picker/issues"
   },
-  "homepage": "https://github.com/JeonB/restraunt-picker#readme",
+  "homepage": ".",
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.11.22",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "electron": "^29.0.1",
+    "prettier": "^3.2.5",
+    "react-scripts": "^5.0.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^4.9.5"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
     "fastify": "^4.26.1",
     "fastify-plugin": "^4.5.1",
     "mongoose": "^8.2.0",
+    "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
+    "primereact": "^10.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.2"
+    "react-router-dom": "^6.22.2",
+    "styled-components": "^6.1.8",
+    "web-vitals": "^3.5.2"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
