--- a/packages/back/tsconfig.json
+++ b/packages/back/tsconfig.json
@@ -107,5 +107,9 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "include": ["packages/front/src", "packages/back/src"]
+  "include": [
+    "packages/front/src",
+    "packages/back/src",
+    "packages/back/tsconfig.json"
+  ]
 }
