--- a/packages/back/package.json
+++ b/packages/back/package.json
@@ -6,16 +6,22 @@
   "homepage": "./src",
   "main": "index.ts",
   "scripts": {
-    "start": "ts-node --files ./src/test.ts",
-    "dev": "ts-node --files ./src/index.ts",
+    "start": "ts-node --files ./src/index.ts",
+    "dev": "ts-node --files ./src/test.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "fastify": "^4.26.1",
     "fastify-plugin": "^4.5.1",
-    "mongoose": "^8.2.0"
+    "mongoose": "^8.2.0",
+    "pg": "^8.11.3",
+    "typeorm": "^0.3.20"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/node": "^20.11.24",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
+  },
   "author": "JeonB",
   "license": "ISC"
 }
