--- a/packages/front/package.json
+++ b/packages/front/package.json
@@ -6,26 +6,43 @@
   "main": "index.tsx",
   "homepage": "./src",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "cross-env NODE_ENV=local webpack serve --progress --color --hot --mode development",
+    "start:dev": "cross-env NODE_ENV=development webpack serve --progress --color --hot --mode development",
+    "build": "webpack --mode=production",
+    "build:dev": "webpack --mode=production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "JeonB",
   "license": "ISC",
   "dependencies": {
+    "core-js": "^3.36.0",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primereact": "^10.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
+    "regenerator-runtime": "^0.14.1",
     "stream-browserify": "^3.0.0",
     "styled-components": "^6.1.8",
     "web-vitals": "^3.5.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/preset-env": "^7.24.0",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
-    "react-scripts": "^5.0.1"
+    "babel-loader": "^9.1.3",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.10.0",
+    "html-webpack-plugin": "^5.6.0",
+    "mini-css-extract-plugin": "^2.8.1",
+    "react-scripts": "^5.0.1",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.2"
   },
   "browserslist": {
     "production": [
