--- a/packages/front/package.json
+++ b/packages/front/package.json
@@ -42,7 +42,8 @@
     "url-loader": "^4.1.1",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.2"
+    "webpack-dev-server": "^5.0.2",
+    "ts-node": "^10.9.2"
   },
   "browserslist": {
     "production": [
