--- a/packages/front/package.json
+++ b/packages/front/package.json
@@ -15,14 +15,18 @@
   "author": "JeonB",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.12",
+    "@mui/material": "^5.15.12",
     "core-js": "^3.36.0",
     "primeflex": "^3.3.1",
-    "primeicons": "^6.0.1",
     "primereact": "^10.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
     "regenerator-runtime": "^0.14.1",
+    "sass": "^1.71.1",
     "stream-browserify": "^3.0.0",
     "styled-components": "^6.1.8",
     "web-vitals": "^3.5.2"
@@ -39,11 +43,12 @@
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.8.1",
     "react-scripts": "^5.0.1",
+    "sass-loader": "^14.1.1",
+    "ts-node": "^10.9.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.2",
-    "ts-node": "^10.9.2"
+    "webpack-dev-server": "^5.0.2"
   },
   "browserslist": {
     "production": [
