--- a/packages/back/package.json
+++ b/packages/back/package.json
@@ -6,14 +6,14 @@
   "homepage": "./src",
   "main": "index.ts",
   "scripts": {
-    "start": "ts-node --files ./src/index.ts",
-    "dev": "ts-node --files ./src/test.ts",
+    "start": "ts-node --files ./src/index.ts  | pino-pretty",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "fastify": "^4.26.1",
     "fastify-plugin": "^4.5.1",
     "pg": "^8.11.3",
+    "pino-pretty": "^10.3.1",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
