--- a/packages/back/package.json
+++ b/packages/back/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "fastify": "^4.26.1",
     "fastify-plugin": "^4.5.1",
+    "@fastify/jwt": "^8.0.0",
+    "bcrypt": "^5.1.1",
     "pg": "^8.11.3",
     "pino-pretty": "^10.3.1",
     "typeorm": "^0.3.20"
