--- a/packages/back/package.json
+++ b/packages/back/package.json
@@ -7,18 +7,20 @@
   "main": "index.ts",
   "scripts": {
     "start": "ts-node --files ./src/index.ts  | pino-pretty",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "dependencies": {
-    "fastify": "^4.26.1",
-    "fastify-plugin": "^4.5.1",
     "@fastify/jwt": "^8.0.0",
     "bcrypt": "^5.1.1",
+    "fastify": "^4.26.1",
+    "fastify-plugin": "^4.5.1",
     "pg": "^8.11.3",
     "pino-pretty": "^10.3.1",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.11.24",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
