--- a/packages/front/package.json
+++ b/packages/front/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=local webpack serve --progress --color --hot --mode development",
     "start:dev": "cross-env NODE_ENV=development webpack serve --progress --color --hot --mode development",
-    "build": "webpack --mode=production",
+    "build": "webpack --config webpack.config.js",
     "build:dev": "webpack --mode=production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -37,6 +37,7 @@
     "@babel/preset-env": "^7.24.0",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
+    "ajv": "^8.12.0",
     "babel-loader": "^9.1.3",
     "cross-env": "^7.0.3",
     "css-loader": "^6.10.0",
