--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "lerna": "^8.1.2",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "ts-jest": "^29.1.2"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
