--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "description": "restauraunt random picker",
   "scripts": {
     "start": "lerna run --stream start",
-    "test": "npm test"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,7 @@
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest-fetch-mock": "^3.0.3",
     "lerna": "^8.1.2",
     "prettier": "^3.2.5",
     "ts-jest": "^29.1.2"
