--- a/packages/back/package.json
+++ b/packages/back/package.json
@@ -7,7 +7,7 @@
   "main": "index.ts",
   "scripts": {
     "start": "ts-node --files ./src/index.ts  | pino-pretty",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "tsc"
   },
   "dependencies": {
