--- a/packages/back/package.json
+++ b/packages/back/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@fastify/jwt": "^8.0.0",
+    "@fastify/swagger": "^8.14.0",
+    "@fastify/swagger-ui": "^3.0.0",
     "bcrypt": "^5.1.1",
     "fastify": "^4.26.1",
     "fastify-plugin": "^4.5.1",
