--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^20.11.22",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
+    "dotenv-webpack": "^8.1.0",
     "eslint": "^8.55.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
