--- a/packages/front/package.json
+++ b/packages/front/package.json
@@ -24,6 +24,7 @@
     "primereact": "^10.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-kakao-maps-sdk": "^1.1.26",
     "react-router-dom": "^6.22.2",
     "regenerator-runtime": "^0.14.1",
     "sass": "^1.71.1",
