--- a/packages/front/package.json
+++ b/packages/front/package.json
@@ -36,6 +36,7 @@
     "@babel/core": "^7.24.0",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.24.0",
+    "@types/node": "^20.11.30",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
     "ajv": "^8.12.0",
