--- a/apps/mobile-app/package.json
+++ b/apps/mobile-app/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "back": "^1.0.0",
+    "front": "^1.0.0",
     "@ant-design/icons": "^4.8.3",
     "@expo/metro-runtime": "~3.1.3",
     "@mdi/js": "^7.4.47",
