Delete unused files and update dependencies

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,12 +11,21 @@ trigger_back:
     refs:
       - develop
 
-trigger_mobile:
-  stage: triggers
-  trigger:
-    include: apps/mobile-app/.gitlab-ci.yml
-  only:
-    changes:
-      - 'apps/mobile-app/**/*'
-    refs:
-      - develop
+# trigger_mobile:
+#   stage: triggers
+#   trigger:
+#     include: apps/mobile-app/.gitlab-ci.yml
+#   only:
+#     changes:
+#       - 'apps/mobile-app/**/*'
+#     refs:
+#       - develop
+
+variables:
+  TYPEORM_USERNAME: '$TYPEORM_USERNAME'
+  TYPEORM_PASSWORD: '$TYPEORM_PASSWORD'
+  TYPEORM_DATABASE: '$TYPEORM_DATABASE'
+  TYPEORM_URL: '$TYPEORM_URL'
+  TYPEORM_ENTITIES: '$TYPEORM_ENTITIES'
+  KAKAO_RESTAPI_KEY: '$KAKAO_RESTAPI_KEY'
+  KAKAO_JAVASCRIPT_KEY: '$KAKAO_JAVASCRIPT_KEY'
