--- a/packages/back/.gitlab-ci.yml
+++ b/packages/back/.gitlab-ci.yml
@@ -1,17 +1,32 @@
 # .gitlab-ci.yml
-
 stages:
+  - build
   - deploy
 
-variables:
-  TYPEORM_USERNAME: '$TYPEORM_USERNAME'
-  TYPEORM_PASSWORD: '$TYPEORM_PASSWORD'
-  TYPEORM_DATABASE: '$TYPEORM_DATABASE'
-  KAKAO_RESTAPI_KEY: '$KAKAO_RESTAPI_KEY'
-  TYPEORM_URL: '$TYPEORM_URL'
-  TYPEORM_ENTITIES: '$TYPEORM_ENTITIES'
+default:
+  tags: # default tag for gitlab runner in verda stg env.
+    - develop
 
-deploy:
-  stage: deploy
+# services:
+#   - docker:19.03.13-dind
+
+build-job:
+  stage: build
+  tags:
+    - develop
   script:
-    - docker-compose -f ./app.yml up -d
+    - echo "Compiling the code..."
+    - echo "build"
+    - docker build -t back .
+  only:
+    - master
+
+deploy-job:
+  stage: deploy
+  tags:
+    - develop
+  script:
+    - echo "Start deploy ..."
+    - docker-compose -f ./app.yml up -d backend
+  only:
+    - master
