--- a/packages/back/.gitlab-ci.yml
+++ b/packages/back/.gitlab-ci.yml
@@ -6,7 +6,7 @@ stages:
 default:
   tags: # default tag for gitlab runner in verda stg env.
     - develop
-
+# test
 # services:
 #   - docker:19.03.13-dind
 
