--- a/packages/back/app.yml
+++ b/packages/back/app.yml
@@ -2,7 +2,8 @@ version: '3'
 
 services:
   backend:
-    image: backend
+    image: back
+    container_name: random-picker-backend
     ports:
       - '3000:3000'
     environment:
