--- a/packages/back/package.json
+++ b/packages/back/package.json
@@ -19,7 +19,8 @@
     "fastify-plugin": "^4.5.1",
     "pg": "^8.11.3",
     "pino-pretty": "^10.3.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
