Update mobile-app configuration and components

--- a/apps/mobile-app/app.json
+++ b/apps/mobile-app/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "PilotApp",
-    "slug": "PilotApp",
+    "name": "mobile-app",
+    "slug": "mobile-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
