--- a/apps/mobile-app/package.json
+++ b/apps/mobile-app/package.json
@@ -9,14 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.8.3",
-    "@expo/metro-runtime": "~3.1.3",
+    "back": "^1.0.0",
+    "@react-navigation/elements": "^1.3.30",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
-    "@react-native-picker/picker": "^2.6.1",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
-    "back": "^1.0.0",
+    "@expo/metro-runtime": "~3.1.3",
     "expo": "~50.0.14",
     "expo-linear-gradient": "^12.7.2",
     "expo-status-bar": "~1.11.1",
@@ -25,9 +26,18 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
     "react-native-normalize": "^1.0.1",
-    "react-native-paper": "^5.12.3",
     "react-native-web": "~0.19.6",
-    "react-native-wheely": "^0.6.0"
+    "react-native-wheely": "^0.6.0",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-kakao-maps-sdk": "^1.1.26",
+    "react-native-maps": "1.10.0",
+    "react-native-paper": "^5.12.3",
+    "react-native-radio-buttons-group": "^3.1.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-webview": "13.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
