Update GitLab CI configuration for mobile-app and back packages

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,3 +29,4 @@ variables:
   TYPEORM_ENTITIES: '$TYPEORM_ENTITIES'
   KAKAO_RESTAPI_KEY: '$KAKAO_RESTAPI_KEY'
   KAKAO_JAVASCRIPT_KEY: '$KAKAO_JAVASCRIPT_KEY'
+  PRIVATE_TOKEN: '$PRIVATE_TOKEN'
