--- a/apps/mobile-app/.gitlab-ci.yml
+++ b/apps/mobile-app/.gitlab-ci.yml
@@ -2,12 +2,17 @@ stages:
   - build
   - deploy
 
-default:
-  tags:
-    - develop
+variables:
+  MAJOR_VERSION: '1'
+  MINOR_VERSION: '0'
+  PATCH_VERSION: '0'
+  IMAGE_TAG: '$MAJOR_VERSION.$MINOR_VERSION.$PATCH_VERSION'
 
+default:
+  tags: # default tag for gitlab runner in verda stg env.
+    - develop
 services:
-  - docker:19.03.13-dind
+  - docker:24.0.9-dind
 
 build-job:
   stage: build
@@ -16,29 +21,24 @@ build-job:
   script:
     - echo "Compiling the code..."
     - echo "build"
-    - docker build -t mobile-app .
+    # Increase the PATCH_VERSION by 1 for every build
+    - export PATCH_VERSION=$(curl --header "PRIVATE-TOKEN:$PRIVATE_TOKEN" "https://192.168.10.100:8100/api/v4/projects/47/variables/PATCH_VERSION" | jq -r '.value')
+    - PATCH_VERSION=$(expr $PATCH_VERSION + 1)
+    - curl --request PUT --header "PRIVATE-TOKEN:$PRIVATE_TOKEN" "https://192.168.10.100:8100/api/v4/projects/47/variables/PATCH_VERSION" --form "value=$PATCH_VERSION"
+    # Update the IMAGE_TAG with the new PATCH_VERSION
+    - export IMAGE_TAG="$MAJOR_VERSION.$MINOR_VERSION.$PATCH_VERSION"
+    # Tagging the Docker image with the updated version
+    - docker build -t random-mobile:$IMAGE_TAG -f $CI_PROJECT_DIR/apps/mobile-app/Dockerfile .
   only:
-    - develop
+    - master
 
 deploy-job:
   stage: deploy
   tags:
     - develop
   script:
-    - echo "Start webpack ..."
+    - echo "Start deploy ..."
+    - cd $CI_PROJECT_DIR/apps/mobile-app
     - docker-compose -f ./app.yml up -d
   only:
-    - develop
-
-deploy-qa:
-  stage: deploy
-  script:
-    - echo "[QA]running build start"
-    - docker build -t qa-mobile-app .
-    - echo "[QA] deploy start"
-    - docker-compose -f ./app-qa.yml up -d
-    - echo "[QA]deploy ended"
-  tags:
-    - qa
-  only:
-    - develop-qa
+    - master
