Update default tags in .gitlab-ci.yml

--- a/packages/back/.gitlab-ci.yml
+++ b/packages/back/.gitlab-ci.yml
@@ -2,7 +2,7 @@ stages:
   - build
   - deploy
 default:
-  tags: # default tag for gitlab runner in verda stg env.
+  tags:
     - develop
 services:
   - docker:24.0.9-dind
