--- a/packages/back/.gitlab-ci.yml
+++ b/packages/back/.gitlab-ci.yml
@@ -15,7 +15,8 @@ build-job:
     - echo "Compiling the code..."
     - echo "build"
     - export PATCH_VERSION=1
-    - docker build -t back:1.0.0 -f $CI_PROJECT_DIR/packages/back/Dockerfile .
+    - docker build -t back:latest -f $CI_PROJECT_DIR/packages/back/Dockerfile .
+    - docker rmi $(docker images -f "dangling=true" -q)
   only:
     - master
 
