--- a/packages/back/.gitlab-ci.yml
+++ b/packages/back/.gitlab-ci.yml
@@ -22,11 +22,11 @@ deploy-job:
   stage: deploy
   tags:
     - develop
-  before_script:
-    - docker rmi $(docker images -f "dangling=true" -q) || true
   script:
     - echo "Start deploy ..."
     - cd $CI_PROJECT_DIR/packages/back
     - docker-compose -f ./app.yml up -d
+  after_script:
+    - docker rmi $(docker images -f "dangling=true" -q) || true
   only:
     - master
