Refactor Docker build command and update environment variables in .gitlab-ci.yml and app.yml

--- a/apps/mobile-app/app.yml
+++ b/apps/mobile-app/app.yml
@@ -8,5 +8,5 @@ services:
       - '3002:3002'
     environment:
       - KAKAO_RESTAPI_KEY=${KAKAO_RESTAPI_KEY}
-      - KAKAO_JAVASCRIPT_KEY=${KAKAO_RESTAPI_KEY}
+      - KAKAO_JAVASCRIPT_KEY=${KAKAO_JAVASCRIPT_KEY}
       - TZ=Asia/Seoul
