--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,7 @@ trigger_back:
       - 'packages/back/**/*'
     refs:
       - master
-
+# test
 # trigger_mobile:
 #   stage: triggers
 #   trigger:
