--- a/packages/back/.gitlab-ci.yml
+++ b/packages/back/.gitlab-ci.yml
@@ -24,6 +24,6 @@ deploy-job:
     - cd $CI_PROJECT_DIR/packages/back
     - docker-compose -f ./app.yml up -d
   after_script:
-    - docker rmi $(docker images -f "dangling=true" -q) || true
+    - docker rmi $(docker images -f "dangling=true" -q) || true &
   only:
     - master
