--- a/apps/mobile-app/package.json
+++ b/apps/mobile-app/package.json
@@ -13,7 +13,6 @@
     "@expo/metro-runtime": "~3.1.3",
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
-    "@react-native-community/geolocation": "^3.2.1",
     "@react-navigation/elements": "^1.3.30",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
@@ -39,7 +38,8 @@
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
     "react-native-webview": "13.6.4",
-    "react-native-wheely": "^0.6.0"
+    "react-native-wheely": "^0.6.0",
+    "expo-location": "~16.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
