--- a/apps/mobile-app/package.json
+++ b/apps/mobile-app/package.json
@@ -7,7 +7,9 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest"
+    "test": "jest",
+    "storybook-generate": "sb-rn-get-stories",
+    "storybook": "STORYBOOK_ENABLED='true' expo start"
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
@@ -19,8 +21,9 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "back": "^1.0.0",
-    "expo": "~50.0.14",
+    "expo": "~50.0.17",
     "expo-linear-gradient": "^12.7.2",
+    "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
     "front": "^1.0.0",
     "react": "18.2.0",
@@ -38,15 +41,21 @@
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
     "react-native-webview": "13.6.4",
-    "react-native-wheely": "^0.6.0",
-    "expo-location": "~16.5.5"
+    "react-native-wheely": "^0.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/datetimepicker": "^7.6.1",
+    "@react-native-community/slider": "^4.4.2",
+    "@storybook/addon-ondevice-actions": "^7.6.18",
+    "@storybook/addon-ondevice-controls": "^7.6.18",
+    "@storybook/react-native": "^7.6.18",
     "@tsconfig/react-native": "^3.0.4",
     "@types/jest": "^29.5.12",
     "@types/react": "^18.2.69",
     "@types/react-test-renderer": "^18.0.7",
+    "babel-loader": "^8.3.0",
     "typescript": "^5.4.3"
   }
 }
