--- a/apps/mobile-app/package.json
+++ b/apps/mobile-app/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mobile-app",
   "version": "1.0.0",
+  "private": true,
   "main": "index.js",
   "scripts": {
     "start": "expo start",
@@ -21,6 +22,8 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "back": "^1.0.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.34.1",
     "expo": "~50.0.17",
     "expo-linear-gradient": "^12.7.2",
     "expo-location": "~16.5.5",
@@ -45,9 +48,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@react-native-async-storage/async-storage": "^1.21.0",
-    "@react-native-community/datetimepicker": "^7.6.1",
-    "@react-native-community/slider": "^4.4.2",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/datetimepicker": "7.6.1",
+    "@react-native-community/slider": "4.4.2",
     "@storybook/addon-ondevice-actions": "^7.6.18",
     "@storybook/addon-ondevice-controls": "^7.6.18",
     "@storybook/react-native": "^7.6.18",
@@ -55,7 +58,13 @@
     "@types/jest": "^29.5.12",
     "@types/react": "^18.2.69",
     "@types/react-test-renderer": "^18.0.7",
+    "@typescript-eslint/eslint-plugin": "^7.7.0",
+    "@typescript-eslint/parser": "^7.7.0",
     "babel-loader": "^8.3.0",
+    "eslint-config-love": "^47.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-n": "16.6.2",
+    "eslint-plugin-prettier": "^5.1.3",
     "typescript": "^5.4.3"
   }
 }
