--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.22",
-    "@typescript-eslint/eslint-plugin": "^5.5.0",
-    "@typescript-eslint/parser": "^5.5.0",
+    "@typescript-eslint/eslint-plugin": "7.7.0",
+    "@typescript-eslint/parser": "7.7.0",
     "dotenv-webpack": "^8.1.0",
     "eslint": "^8.55.0",
     "eslint-plugin-prettier": "^5.0.1",
